--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
-<body>
+<body style="background-color:black;color:white">
     <center>
         <div>
             <br />
