--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--Google Webfonts-->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
-<body style="background-color:black;color:white">
+<body>
     <!-- Preloader -->
 <div id="preloader">
     <div id="status" class="la-ball-triangle-path">
