--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="utf-8" />
-    <title></title>
+    <title>ADTech Portfolio</title>
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
     <meta name="description" content="">
